# harebare

./: .firebaserc  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  firebase.json  firestore.rules  firestore.rules.json  package-lock.json  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
copilot/: .workspace
docker/pgadmin/: pgadmin4.db
docker/pgadmin/sessions/: 0317449a-e0bb-4a3a-826e-ac1376213bba  067b041c-bbea-474c-97c7-23bb11788c3d  1de0b644-fee2-4587-b143-835cd8679437  449a31a5-a6cb-47c0-8b3d-35f4c09cdaf6  4517033b-6142-40d3-964c-c3806b578b14  70638419-eb07-4d46-b887-7e06b8a6822c  c454ba8f-569e-4899-8a76-a0b30d3c5606
migrations/: env.py
migrations/versions/: 4cba66db4e3c_initial_migration.py
nextapp/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nextapp/components/: Header.tsx
nextapp/context/: auth.tsx
nextapp/lib/: auth.tsx  firebase.tsx
nextapp/src/app/: layout.tsx  page.tsx
nextapp/src/context/: auth.tsx
nextapp/src/lib/: auth.tsx  checkout.tsx  firebase.tsx
nextapp/src/pages/: Home.tsx  Login.tsx  SignIn.tsx  _app.tsx  checkout.tsx  index.tsx  mypage.tsx  register.tsx  unauthorised.tsx
nextapp/src/styles/: globals.css
nextapp/types/: user.tsx
public/: index.html
serverapi/: main.py  settings.json
serverapi/api/: __init__.py
serverapi/api/endpoints/: database.py  endpoint.py  model.py  schema.py
serverapi/database/: database.py
serverapi/models/: model.py
serverapi/router/: llm.py
serverapi/schemas/: schema.py
serverapi/services/: service.py
(+11 files in other folders)
